# 2nd_hackathon-phase1-3

./: .env  .env.example  .env.vercel  .gitignore  CLAUDE.md  ENVIRONMENT.md  README.md  VERCEL_DEPLOYMENT_CHECKLIST.md  constitution.md  constraints.txt  env.vercel  guide.md  package-lock.json  package.json  pyproject.toml  requirements.txt  structure.md  temp_root_env  temp_root_env_neon  temp_root_env_sqlite  test_db_simple.py  vercel.json  verify_p2_backend.py
.claude/: BETTER_AUTH_MCP_INTEGRATION.md  mcp-config.json  project-config.json  settings.local.json
.specify/memory/: constitution.md  📜 CONSTITUTION-Full Todo Spec-Driven Development.md  📜 CONSTITUTION-Phase II — Full-Stack Web Application.md
api/: index.py
src/backend/: .env  .env.backend  .env.example  main.py  models.py  pyproject.toml
src/backend/mcp_server/: agent.py  chat_endpoint.py  mcp_server.py  task_tools.py
src/frontend/: .env.example  .env.local  auth_v3.ts  next.config.js  temp_env_config  temp_front_env_neon  temp_front_env_sqlite  test_db.js
src/frontend/app/: layout.tsx  page.tsx
src/frontend/components/: TaskInterface.tsx
