[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104,<0.110",
    "uvicorn>=0.23,<0.30",
    "pydantic==2.4.2",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "pyjwt>=2.8",
    "python-dotenv>=1.0",
    "requests>=2.31"
]
